--- a/www-public/addkeys.html
+++ b/www-public/addkeys.html
@@ -341,7 +341,7 @@
                 <form id="AddKeys">
                     <legend><span class="number">1</span>Add new Keys</legend>
                     <label id="OwnerDiscription" for="Status">Username:</label>
-                    <input type="text" id="owner" placeholder=''>
+                    <input type="text" id="owner" disabled placeholder=''>
                     <label id="StatusDiscription" for="Status">Status:</label>
                     <select id="StatusSelect" onchange="GeneratePreviewTable()" name="Status">
                         <optgroup label="Status List">
