Fixed spelling of "Available"

--- a/www-public/addkeys.html
+++ b/www-public/addkeys.html
@@ -345,7 +345,7 @@
                     <label id="StatusDiscription" for="Status">Status:</label>
                     <select id="StatusSelect" onchange="GeneratePreviewTable()" name="Status">
                         <optgroup label="Status List">
-                        <option value="ava">Avaible</option>
+                        <option value="ava">Available</option>
                         <option value="unk">Unknown</option>
                     </select>   
                     <label id="StatusDiscription" for="Status">Who can gift it to others:</label>
