--- a/www-public/index.html
+++ b/www-public/index.html
@@ -164,7 +164,7 @@
                 <button class="dropbtn" id="StatusDropdown">Status</button>
                 <div class="dropdown-content">
                 <a onclick="setStatus('all')">All</a>
-                <a onclick="setStatus('ava')">Avaible</a>
+                <a onclick="setStatus('ava')">Available</a>
                 <a onclick="setStatus('unk')">Unknown</a>
                 <a onclick="setStatus('gif')">Gifted</a>
                 <a onclick="setStatus('use')">Used</a>
@@ -187,7 +187,7 @@
                 <button class="dropbtn" id="StatusDropdown">Status</button>
                 <div class="dropdown-content">
                 <a onclick="setStatus('all')">All</a>
-                <a onclick="setStatus('ava')">Avaible</a>
+                <a onclick="setStatus('ava')">Available</a>
                 <a onclick="setStatus('unk')">Unknown</a>
                 <a onclick="setStatus('gif')">Gifted</a>
                 <a onclick="setStatus('use')">Used</a>
