UI: Should fix navigator.clipboard is undefined on http

--- a/www-public/claim.html
+++ b/www-public/claim.html
@@ -582,7 +582,7 @@
                             position: SnackBox_Location,
                             status: "success",
                         });
-                        navigator.clipboard.writeText(`${GiftData}`);
+                        navigator?.clipboard?.writeText(`${GiftData}`);
                     }else{
                         SnackBar({
                         message: `Key could not be copied to your clipboard`,
