UI: Fixed snackbar
Thanks to: https://github.com/mickelsonmichael/js-snackbar/issues/81

--- a/www-public/addkeys.html
+++ b/www-public/addkeys.html
@@ -420,6 +420,7 @@
             width: "400px",
             speed: SnackBox_Timeout,
             position: SnackBox_Location,
+            fixed: true,
             status: "success",
         });
     }
@@ -433,6 +434,7 @@
                 width: "400px",
                 speed: SnackBox_Timeout,
                 position: SnackBox_Location,
+                fixed: true,
                 status: "error",
                     });
             return;
@@ -458,6 +460,7 @@
                     width: "400px",
                     speed: SnackBox_Timeout,
                     position: SnackBox_Location,
+                    fixed: true,
                     status: "success",
                 });
                 if(keystatus.KeyRejected.length > 0){
@@ -466,6 +469,7 @@
                         width: "400px",
                         speed: SnackBox_Timeout,
                         position: SnackBox_Location,
+                        fixed: true,
                         status: "error",
                     });
                 }
@@ -477,6 +481,7 @@
                         width: "400px",
                         speed: SnackBox_Timeout,
                         position: SnackBox_Location,
+                        fixed: true,
                         status: "error",
                     });
                 } else if (err.status === 500) {
@@ -485,6 +490,7 @@
                         width: "400px",
                         speed: SnackBox_Timeout,
                         position: SnackBox_Location,
+                        fixed: true,
                         status: "error",
                     });
                 } else if (err.status === 401 || err.status === 400 || err.status === 403) {
@@ -493,6 +499,7 @@
                         width: "400px",
                         speed: SnackBox_Timeout,
                         position: SnackBox_Location,
+                        fixed: true,
                         status: "error",
                     });
                 }
