--- a/www-public/claim.html
+++ b/www-public/claim.html
@@ -481,6 +481,7 @@
                         width: "400px",
                         speed: SnackBox_Timeout,
                         position: SnackBox_Location,
+                        fixed: true,
                         status: "error",
                     });
                 } else if (err.status === 500) {
@@ -489,6 +490,7 @@
                         width: "400px",
                         speed: SnackBox_Timeout,
                         position: SnackBox_Location,
+                        fixed: true,
                         status: "error",
                     });
                 } else if (err.status === 401 || err.status === 400 || err.status === 403) {
@@ -497,6 +499,7 @@
                         width: "400px",
                         speed: SnackBox_Timeout,
                         position: SnackBox_Location,
+                        fixed: true,
                         status: "error",
                     });
                 }
@@ -525,6 +528,7 @@
                         width: "400px",
                         speed: SnackBox_Timeout,
                         position: SnackBox_Location,
+                        fixed: true,
                         status: "error",
                     });
                 } else if (err.status === 500) {
@@ -533,6 +537,7 @@
                         width: "400px",
                         speed: SnackBox_Timeout,
                         position: SnackBox_Location,
+                        fixed: true,
                         status: "error",
                     });
                 } else if (err.status === 401 || err.status === 400 || err.status === 403) {
@@ -541,6 +546,7 @@
                         width: "400px",
                         speed: SnackBox_Timeout,
                         position: SnackBox_Location,
+                        fixed: true,
                         status: "error",
                     });
                 }
@@ -580,6 +586,7 @@
                             width: "400px",
                             speed: SnackBox_Timeout,
                             position: SnackBox_Location,
+                            fixed: true,
                             status: "success",
                         });
                         navigator?.clipboard?.writeText(`${GiftData}`);
@@ -589,6 +596,7 @@
                         width: "400px",
                         speed: SnackBox_Timeout,
                         position: SnackBox_Location,
+                        fixed: true,
                         status: "success",
                     });
                     }
@@ -604,6 +612,7 @@
                             width: "400px",
                             speed: SnackBox_Timeout,
                             position: SnackBox_Location,
+                            fixed: true,
                             status: "error",
                         });
                     } else if (err.status === 500) {
@@ -612,6 +621,7 @@
                             width: "400px",
                             speed: SnackBox_Timeout,
                             position: SnackBox_Location,
+                            fixed: true,
                             status: "error",
                         });
                     } else if (err.status === 401 || err.status === 400 || err.status === 403) {
@@ -620,6 +630,7 @@
                             width: "400px",
                             speed: SnackBox_Timeout,
                             position: SnackBox_Location,
+                            fixed: true,
                             status: "error",
                         });
                     }
