--- a/www-public/index.html
+++ b/www-public/index.html
@@ -255,6 +255,7 @@
                 width: "600px",
                 speed: SnackBox_Timeout*5,
                 position: SnackBox_Location,
+                fixed: true,
                 status: "success",
               });
               }
@@ -263,6 +264,7 @@
                 width: "600px",
                 speed: SnackBox_Timeout,
                 position: SnackBox_Location,
+                fixed: true,
                 status: "success",
               });
             }else{
@@ -271,6 +273,7 @@
                 width: "600px",
                 speed: SnackBox_Timeout,
                 position: SnackBox_Location,
+                fixed: true,
                 status: "success",
               });
             }
@@ -284,6 +287,7 @@
                 width: "400px",
                 speed: SnackBox_Timeout,
                 position: SnackBox_Location,
+                fixed: true,
                 status: "error",
               });
             } else if (err.status === 500) {
@@ -292,6 +296,7 @@
                 width: "400px",
                 speed: SnackBox_Timeout,
                 position: SnackBox_Location,
+                fixed: true,
                 status: "error",
               });
             } else if (
@@ -305,6 +310,7 @@
                 width: "400px",
                 speed: SnackBox_Timeout,
                 position: SnackBox_Location,
+                fixed: true,
                 status: "error",
               });
             }
@@ -328,6 +334,7 @@
               with: "600px",
               speed: SnackBox_Timeout+4,
               position: SnackBox_Location,
+              fixed: true,
               status: "success",
             })
           },
@@ -338,6 +345,7 @@
                 width: "400px",
                 speed: SnackBox_Timeout,
                 position: SnackBox_Location,
+                fixed: true,
                 status: "error",
               });
             } else if (err.status === 500) {
@@ -346,6 +354,7 @@
                 width: "400px",
                 speed: SnackBox_Timeout,
                 position: SnackBox_Location,
+                fixed: true,
                 status: "error",
               });
             } else if (
@@ -358,6 +367,7 @@
                 width: "400px",
                 speed: SnackBox_Timeout,
                 position: SnackBox_Location,
+                fixed: true,
                 status: "error",
               });
             }
@@ -420,6 +430,7 @@
                 width: "400px",
                 speed: SnackBox_Timeout,
                 position: SnackBox_Location,
+                fixed: true,
                 status: "error",
               });
             } else if (err.status === 500) {
@@ -428,6 +439,7 @@
                 width: "400px",
                 speed: SnackBox_Timeout,
                 position: SnackBox_Location,
+                fixed: true,
                 status: "error",
               });
             } else if (
@@ -440,6 +452,7 @@
                 width: "400px",
                 speed: SnackBox_Timeout,
                 position: SnackBox_Location,
+                fixed: true,
                 status: "error",
               });
             }
